# 1bit_gate_mlp

./: .gitignore  README.md  flake.nix  pyproject.toml
scripts/: plot_readme_graphs.py
src/onebit_gate_mlp/: __init__.py  data.py  models.py  optim.py  train.py
