[project]
name = "onebit-gate-mlp"
version = "0.1.0"
description = "MLX experiments for 1D MNIST with MLP-only and attention-MLP architectures."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mlx>=0.25.0",
  "numpy>=2.0.0",
  "tqdm>=4.66.0",
]

[project.scripts]
train-1d-mnist = "onebit_gate_mlp.train:main"

[dependency-groups]
dev = [
  "matplotlib>=3.11.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onebit_gate_mlp"]

[tool.ruff]
line-length = 100
target-version = "py312"

